--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -18,7 +18,7 @@
       <div class="u-margin-top-15">
         <div>
           <mat-form-field class="search-block" floatLabel="never">
-            <input matInput autocomplete="off" (keyup)="applyFilter($event)" placeholder="Search" />
+            <input autocomplete="off"  matInput autocomplete="off" (keyup)="applyFilter($event)" placeholder="Search" />
             <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
           </mat-form-field>
         </div>
