--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -23,19 +23,19 @@
       <mat-card-content>
         <mat-form-field appearance="outline">
           <mat-label>Username</mat-label>
-          <input matInput readonly value="{{ userdata?.name }}" />
+          <input autocomplete="off"  matInput readonly value="{{ userdata?.name }}" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input matInput readonly value="{{ userdata?.email }}" />
+          <input autocomplete="off"  matInput readonly value="{{ userdata?.email }}" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input matInput readonly value="value" />
+          <input autocomplete="off"  matInput readonly value="value" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>ProfilePic</mat-label>
-          <input matInput readonly value="{{ userdata?.photoUrl }}" />
+          <input autocomplete="off"  matInput readonly value="{{ userdata?.photoUrl }}" />
         </mat-form-field>
       </mat-card-content>
     </mat-card>
