--- a/src/app/shared/big-input/big-input/big-input.component.html
+++ b/src/app/shared/big-input/big-input/big-input.component.html
@@ -3,7 +3,7 @@
   [ngStyle]="{'min-height': height + 'px' ,'border-radius' : radius + 'px'}"
   [ngClass]="{ 'has-focus': hasFocus }"
 >
-  <input
+  <input autocomplete="off"
     (focus)="hasFocus = true"
     (blur)="hasFocus = false"
     [value]="value"
