--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
     />
     <div class="search-bar" [hidden]="isHidden || isAdmin">
       <mat-form-field appearance="outline">
-        <input matInput />
+        <input autocomplete="off"  matInput />
         <mat-icon matSuffix style="font-size: 25px;margin-right: 20px;">search</mat-icon>
       </mat-form-field>
     </div>
