--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -3,41 +3,31 @@
     <mat-card-header>
       <mat-card-title>Sign In</mat-card-title>
     </mat-card-header>
-    <form class="input-form">
+    <form class="input-form" [formGroup]="loginform">
       <mat-form-field class="input-full-width">
         <mat-label>Username</mat-label>
-        <input matInput [formControl]="usernameFormControl" />
-        <mat-error
-          *ngIf="
-            usernameFormControl.errors?.minlength &&
-            !usernameFormControl.hasError('required')
-          "
-        >
+        <input autocomplete="off"   matInput formControlName="usernameFormControl" />
+        <mat-error *ngIf="hasError('usernameFormControl','minlength')">
           Username must be at least 3 characters long.
         </mat-error>
-        <mat-error *ngIf="usernameFormControl.hasError('required')">
+        <mat-error *ngIf="hasError('usernameFormControl','required')">
           Username is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
         <mat-label>Password</mat-label>
-        <input matInput [formControl]="passwordFormControl" />
-        <mat-error
-          *ngIf="
-            passwordFormControl.errors?.minlength &&
-            !passwordFormControl.hasError('required')
-          "
-        >
+        <input autocomplete="off"  matInput formControlName="passwordFormControl" />
+        <mat-error *ngIf="hasError('passwordFormControl','minlength')">
           Password must be at least 4 characters long.
         </mat-error>
-        <mat-error *ngIf="passwordFormControl.hasError('required')">
+        <mat-error *ngIf="hasError('passwordFormControl','required')">
           Password is <strong>required</strong>
         </mat-error>
       </mat-form-field>
     </form>
     <mat-card-content> </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button class="signin-btn" (click)="login()">
+      <button mat-raised-button class="signin-btn" [disabled]="loginform.invalid" (click)="login()">
         Sign In
       </button>
       <button mat-raised-button class="google-btn" (click)="loginWithGoogle()">
