--- a/src/app/features/admin-management/product-components/add-product/add-product.component.html
+++ b/src/app/features/admin-management/product-components/add-product/add-product.component.html
@@ -2,7 +2,7 @@
 <div class="billing-container">
   <mat-card class="edit-profile-card">
     <mat-card-content>
-      <form>
+      <form [formGroup]="addproductform">
         <table class="table-full-width" cellspacing="0">
           <tr>
             <td>
@@ -10,14 +10,14 @@
                 <mat-label>Category</mat-label>
                 <mat-select
                   required
-                  [formControl]="selectedcategory"
+                  formControlName="selectedcategory"
                   (selectionChange)="onCategorySelect($event)"
                 >
                   <mat-option *ngFor="let category of category" [value]="category.name">
                     {{ category.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="selectedcategory.hasError('required')"
+                <mat-error *ngIf="hasError('selectedcategory','required')"
                   >You must make a selection</mat-error
                 >
               </mat-form-field>
@@ -25,7 +25,11 @@
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
                 <mat-label>InnerCategory</mat-label>
-                <mat-select required [formControl]="selectedinnerCategory" [disabled]="isDisabled">
+                <mat-select
+                  required
+                  formControlName="selectedinnerCategory"
+                  [disabled]="isDisabled"
+                >
                   <mat-option
                     *ngFor="let innerCategory of InnerCategory"
                     [value]="innerCategory.name"
@@ -33,7 +37,7 @@
                     {{ innerCategory.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="selectedinnerCategory.hasError('required')"
+                <mat-error *ngIf="hasError('selectedinnerCategory','required')"
                   >You must make a selection</mat-error
                 >
               </mat-form-field>
@@ -46,8 +50,13 @@
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Product Name</mat-label>
-                <input required matInput [formControl]="productNameFormControl" />
-                <mat-error *ngIf="productNameFormControl.hasError('required')">
+                <input
+                  autocomplete="off"
+                  required
+                  matInput
+                  formControlName="productNameFormControl"
+                />
+                <mat-error *ngIf="hasError('productNameFormControl','required')">
                   Product Name is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
@@ -60,8 +69,14 @@
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Quantity</mat-label>
-                <input required matInput [formControl]="quantityFormControl" />
-                <mat-error *ngIf="quantityFormControl.hasError('required')">
+                <input autocomplete="off" required matInput formControlName="quantityFormControl" />
+                <mat-error *ngIf="hasError('quantityFormControl','min')">
+                  Enter Positive <strong>value</strong>
+                </mat-error>
+                <mat-error *ngIf="hasError('quantityFormControl','pattern')">
+                  Enter valid <strong>value</strong>
+                </mat-error>
+                <mat-error *ngIf="hasError('quantityFormControl','required')">
                   Quantity is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
@@ -69,8 +84,14 @@
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Price</mat-label>
-                <input required matInput [formControl]="priceFormControl" />
-                <mat-error *ngIf="priceFormControl.hasError('required')">
+                <input autocomplete="off" required matInput formControlName="priceFormControl" />
+                <mat-error *ngIf="hasError('priceFormControl','min')">
+                  Enter Positive <strong>value</strong>
+                </mat-error>
+                <mat-error *ngIf="hasError('priceFormControl','pattern')">
+                  Enter valid <strong>value</strong>
+                </mat-error>
+                <mat-error *ngIf="hasError('priceFormControl','required')">
                   Price is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
@@ -86,9 +107,9 @@
                 <textarea
                   matInput
                   required
-                  [formControl]="productDescriptionFormControl"
+                  formControlName="productDescriptionFormControl"
                 ></textarea>
-                <mat-error *ngIf="productDescriptionFormControl.hasError('required')">
+                <mat-error *ngIf="hasError('productDescriptionFormControl','required')">
                   Product Description is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
@@ -101,8 +122,13 @@
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Image URL</mat-label>
-                <input required matInput [formControl]="productImage1FormControl" />
-                <mat-error *ngIf="productImage1FormControl.hasError('required')">
+                <input
+                  autocomplete="off"
+                  required
+                  matInput
+                  formControlName="productImage1FormControl"
+                />
+                <mat-error *ngIf="hasError('productImage1FormControl','required')">
                   Image is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
@@ -110,13 +136,13 @@
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Image URL-2</mat-label>
-                <input matInput [formControl]="productImage2FormControl" />
+                <input autocomplete="off" matInput formControlName="productImage2FormControl" />
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline">
                 <mat-label>Image URL-3</mat-label>
-                <input matInput [formControl]="productImage3FormControl" />
+                <input autocomplete="off" matInput formControlName="productImage3FormControl" />
               </mat-form-field>
             </td>
           </tr>
@@ -126,7 +152,7 @@
   </mat-card>
 </div>
 <mat-toolbar color="primary" class="edit-footer">
-  <button mat-raised-button (click)="AddProduct()">
+  <button mat-raised-button [disabled]="addproductform.invalid" (click)="AddProduct()">
     Save
   </button>
   &nbsp; &nbsp; &nbsp; &nbsp;
