--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -17,7 +17,7 @@
       <div class="u-margin-top-15">
         <div>
           <mat-form-field class="search-block" floatLabel="never">
-            <input matInput autocomplete="off" (keyup)="applyFilter($event)" placeholder="Search" />
+            <input autocomplete="off"  matInput autocomplete="off" (keyup)="applyFilter($event)" placeholder="Search" />
             <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
           </mat-form-field>
         </div>
@@ -43,7 +43,7 @@
               <td mat-cell *matCellDef="let element">
                 <!-- <div class="input-quantity">
                   <mat-form-field class="search-field" appearance="outline">
-                    <input
+                    <input autocomplete="off"
                       matInput
                       type="number"
                       readonly
