--- a/src/app/features/user-management/register/register.component.html
+++ b/src/app/features/user-management/register/register.component.html
@@ -3,63 +3,53 @@
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
     </mat-card-header>
-    <form class="input-form">
+    <form class="input-form" [formGroup]="registerform">
       <mat-form-field class="input-full-width">
         <mat-label>Username</mat-label>
-        <input matInput [formControl]="usernameFormControl" />
-        <mat-error
-          *ngIf="
-            usernameFormControl.errors?.minlength &&
-            !usernameFormControl.hasError('required')
-          "
-        >
+        <input autocomplete="off" matInput formControlName="usernameFormControl" />
+        <mat-error *ngIf="hasError('usernameFormControl','minlength')">
           Name must be at least 3 characters long.
         </mat-error>
-        <mat-error *ngIf="usernameFormControl.hasError('required')">
+        <mat-error *ngIf="hasError('usernameFormControl','required')">
           Username is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
         <mat-label>Email</mat-label>
-        <input matInput [formControl]="emailFormControl" />
-        <mat-error
-          *ngIf="
-            emailFormControl.hasError('email') &&
-            !emailFormControl.hasError('required')
-          "
-        >
+        <input autocomplete="off" matInput formControlName="emailFormControl" />
+        <mat-error *ngIf="hasError('emailFormControl','email')">
           Please enter a valid email address
         </mat-error>
-        <mat-error *ngIf="emailFormControl.hasError('required')">
+        <mat-error *ngIf="hasError('emailFormControl','required')">
           Email is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
         <mat-label>Profile Pic</mat-label>
-        <input matInput [formControl]="photoFormControl" />
-        <mat-error *ngIf="photoFormControl.hasError('required')">
+        <input autocomplete="off" matInput formControlName="photoFormControl" />
+        <mat-error *ngIf="hasError('photoFormControl','required')">
           Profile Pic is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
         <mat-label>Password</mat-label>
-        <input matInput [formControl]="passwordFormControl" />
-        <mat-error
-          *ngIf="
-            passwordFormControl.errors?.minlength &&
-            !passwordFormControl.hasError('required')
-          "
-        >
+        <input autocomplete="off" matInput formControlName="passwordFormControl" />
+        <mat-error *ngIf="hasError('passwordFormControl','minlength')">
           Password must be at least 4 characters long.
         </mat-error>
-        <mat-error *ngIf="passwordFormControl.hasError('required')">
+        <mat-error *ngIf="hasError('passwordFormControl','required')">
           Password is <strong>required</strong>
         </mat-error>
       </mat-form-field>
     </form>
     <mat-card-content> </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button class="signin-btn" (click)="register()">
+      <button
+        mat-raised-button
+        [disabled]="registerform.invalid"
+        class="signin-btn"
+        (click)="register()"
+      >
         Register
       </button>
     </mat-card-actions>
